@@ -11,6 +11,10 @@
 	* tt_cmap.c (handle_subst_glyphs): Don't try to added invalid CMap
 	entries (regression from r34718).
 
+	* cff.c, cff.h: Add cff_get_glyphname convenience function.
+	* tt_cmap.c (sfnt_get_glyphname): Support getting glyph names from
+	OpenType/CFF fonts (regression from r34718).
+
 2014-07-28  Jiang Jiang  <gzjjgod@gmail.com>
 
 	* cid.c, pdfdev.c: Correct release of retained cff_charsets.
